<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="add_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="order_button">Order</string>
    <string name="name_field">Enter your name here</string>
</resources>
