<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/name_field"
        android:inputType="textCapWords" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>
    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:orientation="horizontal"

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:onClick="decrement"
            android:text="-" />

         <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="0" />

        <Button
            android:id="@+id/plus_button"
            android:layout_below="@id/quantity_text"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+"/>


    </LinearLayout>

    <Button
        android:id="@+id/button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button"
        android:textAllCaps="true"/>
</LinearLayout>
</ScrollView>